--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html class="scroll-smooth" lang="id">
  <head>
   <meta charset="utf-8"/>
@@ -287,7 +288,12 @@
    <h1 class="font-extrabold text-black text-2xl sm:text-3xl md:text-4xl leading-tight mb-4 sm:mb-6">
     Hallo, Senang bertemu dengan mu developer ;)
    </h1>
-   <button class="inline-flex items-center gap-2 bg-blue-200 text-black font-semibold text-base sm:text-lg rounded-full px-6 sm:px-8 py-2 sm:py-3 mb-6 sm:mb-8 hover:bg-blue-300 focus:outline-none focus:ring-2 focus:ring-blue-400" type="button">
+   <!-- Tombol Developer dengan redirect ke dev.html -->
+   <button 
+     class="inline-flex items-center gap-2 bg-blue-200 text-black font-semibold text-base sm:text-lg rounded-full px-6 sm:px-8 py-2 sm:py-3 mb-6 sm:mb-8 hover:bg-blue-300 focus:outline-none focus:ring-2 focus:ring-blue-400" 
+     type="button" 
+     onclick="window.location.href='dev.html'"
+   >
     Developer
     <svg aria-hidden="true" class="h-4 sm:h-5 w-4 sm:w-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M17 7l4 4m0 0l-4 4m4-4H3" stroke-linecap="round" stroke-linejoin="round"></path>
