--- a/index.html
+++ b/index.html
@@ -88,12 +88,10 @@
      font-weight: 700;
      font-size: 1.25rem;
    }
-   .overlay-extended {
+   .video-extended {
      width: 100%;
      height: 300px;
-     background-image: url('https://via.placeholder.com/1200x300/00000080/00000080.png');
-     background-size: cover;
-     background-position: center;
+     object-fit: cover;
      border-radius: 1.5rem;
      margin: 0 auto;
      padding: 0 4rem;
@@ -243,10 +241,9 @@
      .image-container img {
        max-height: 250px;
      }
-     .overlay-extended {
+     .video-extended {
        height: 200px;
        padding: 0 2rem;
-       background-image: url('https://via.placeholder.com/600x200/00000080/00000080.png');
      }
      .package-text {
        font-size: 1rem;
@@ -294,11 +291,28 @@
        min-width: 160px;
        height: 1.8em;
      }
+     /* Responsivitas untuk persegi panjang */
+     .rectangle-container {
+       padding-left: 2rem;
+       padding-right: 2rem;
+     }
+     .rectangle {
+       width: 6rem; /* w-24 */
+       height: 10rem; /* h-40 */
+     }
+     .rectangle img {
+       width: 2.5rem; /* w-10 */
+       height: 2.5rem; /* h-10 */
+       margin-top: 1.5rem; /* mt-6 */
+     }
+     .rectangle span {
+       font-size: 0.875rem; /* text-sm */
+       margin-top: 2rem; /* mt-8 */
+     }
    }
    @media (min-width: 641px) and (max-width: 1024px) {
-     .overlay-extended {
+     .video-extended {
        height: 250px;
-       background-image: url('https://via.placeholder.com/800x250/00000080/00000080.png');
      }
      .image-container img {
        max-height: 300px;
@@ -337,7 +351,6 @@
    <p class="font-bold text-black text-2xl sm:text-2xl md:text-2xl leading-tight mb-4 sm:mb-6">
      Lakukan apa yang anda mau dan memberontak tentang batasan di ponsel anda
    </p>
-   <!-- Tombol Developer dimodifikasi untuk redirect ke dev.html -->
    <button 
      class="inline-flex items-center gap-2 bg-blue-200 text-black font-semibold text-base sm:text-lg rounded-full px-6 sm:px-8 py-2 sm:py-3 mb-6 sm:mb-8 hover:bg-blue-300 focus:outline-none focus:ring-2 focus:ring-blue-400" 
      type="button" 
@@ -352,7 +365,26 @@
     <img alt="Black background" src="https://storage.googleapis.com/a1aa/image/15eb38c6-9c9f-4973-a771-0864e3f70e80.jpg" width="100%"/>
    </div>
    <div class="package-text">Package</div>
-   <div class="overlay-extended"></div>
+   <!-- Tiga persegi panjang dengan foto PNG dan teks -->
+   <div class="flex justify-between gap-2 max-w-3xl mx-auto mt-4 px-4 rectangle-container">
+     <div class="w-32 h-48 bg-blue-200 rounded-lg flex flex-col items-center rectangle">
+       <img src="https://via.placeholder.com/64x64/000000/FFFFFF?text=A" alt="Android Icon" class="w-16 h-16 rounded-full mt-8"/>
+       <span class="mt-12 text-center font-semibold">Android</span>
+     </div>
+     <div class="w-32 h-48 bg-blue-200 rounded-lg flex flex-col items-center rectangle">
+       <img src="https://via.placeholder.com/64x64/000000/FFFFFF?text=I" alt="IOS Icon" class="w-16 h-16 rounded-full mt-8"/>
+       <span class="mt-12 text-center font-semibold">IOS</span>
+     </div>
+     <div class="w-32 h-48 bg-blue-200 rounded-lg flex flex-col items-center rectangle">
+       <img src="https://via.placeholder.com/64x64/000000/FFFFFF?text=D" alt="DNS Icon" class="w-16 h-16 rounded-full mt-8"/>
+       <span class="mt-12 text-center font-semibold">DNS</span>
+     </div>
+   </div>
+   <!-- Video menggantikan overlay-extended -->
+   <video class="video-extended" autoplay loop muted playsinline>
+     <source src="./vi11/banner45.mp4" type="video/mp4">
+     Your browser does not support the video tag.
+   </video>
    <div class="text-below-overlay">
     <h2>Package</h2>
     <p>Website ini menyediakan berbagai informasi dan layanan terkait pengembangan aplikasi dengan fokus pada teknologi terbaru dan solusi inovatif untuk developer.</p>
@@ -408,20 +440,16 @@
    let index = 0;
 
    function changeHello() {
-     // Fade out
      helloText.classList.remove('active');
      setTimeout(() => {
-       // Ganti teks saat opacity 0
        helloText.textContent = hellos[index];
        index = (index + 1) % hellos.length;
-       // Fade in
        helloText.classList.add('active');
-     }, 500); // Tunggu fade out selesai (0.5 detik)
+     }, 500);
    }
 
-   // Mulai animasi
    changeHello();
-   setInterval(changeHello, 3000); // Ganti setiap 3 detik
+   setInterval(changeHello, 3000);
   </script>
  </body>
- </html>
+    </html>
