--- a/dev.html
+++ b/dev.html
@@ -356,7 +356,7 @@
       localStorage.setItem('easterEggPlaying', 'true');
     }
 
-    // Fungsi untuk memeriksa dan melanjutkan pemutaran audio saat halaman dimuat
+    // Fungsi untuk memeriksa dan melanjutkan pemutaran audio
     function checkAudioPlayback() {
       if (localStorage.getItem('easterEggPlaying') === 'true') {
         easterEggAudio.play().catch(error => {
@@ -373,436 +373,35 @@
     developerPhoto.addEventListener('click', () => {
       clickCount++;
       if (clickCount === 10) {
-        // Putar audio dan simpan status
         playEasterEggAudio();
-        // Tampilkan pesan
         easterEggMessage.style.display = 'block';
-        // Sembunyikan pesan setelah 5 detik
         setTimeout(() => {
           easterEggMessage.style.display = 'none';
         }, 5000);
-        // Reset click count
         clickCount = 0;
       }
     });
 
-    // Hentikan audio saat pengguna meninggalkan website (opsional)
-    window.addEventIPHER
-
-System: * The user’s message was cut off, but it appears they want to ensure the Easter Egg music continues playing across all pages of the website, even when navigating away from `dev.html`, as long as the user remains on the same website. The previous response provided a partial solution using `localStorage` to track the audio state and included JavaScript to handle playback. However, the code was incomplete, particularly in the script section where it cuts off at `window.addEvent`. The user likely expects a complete solution, including handling edge cases like stopping the audio when the user closes the website or browser tab.
-
-* I’ll complete the code by:
-  - Finishing the JavaScript logic, including the incomplete `window.addEventListener`.
-  - Adding an event listener to stop the audio when the user leaves the website (e.g., closes the tab or navigates to a different domain).
-  - Ensuring the audio element and playback logic are reusable across all pages.
-  - Providing instructions for implementing this on other pages (e.g., `index.html`).
-
-* Since the user requested the solution in Indonesian and asked for the full code, I’ll provide the complete `dev.html` code with the updated Easter Egg functionality and include a snippet for other pages to ensure consistent audio playback. I’ll also maintain the existing functionality (10 clicks on the developer’s photo to trigger the audio and display a message for 5 seconds) and ensure the music loops as specified.
-
-* **Assumptions**:
-  - The website uses multiple HTML files (e.g., `dev.html`, `index.html`) but shares the same domain.
-  - The audio file `bgg/sd/EasterEGG/RoiTaSeNgam.m4a` is accessible from all pages.
-  - Other pages have a similar structure (e.g., include Tailwind CSS, Font Awesome, and Google Fonts) or can include the necessary `<audio>` element and JavaScript.
-  - The user wants the audio to stop when the browser tab is closed or the user navigates to a different website.
-
-Here’s the complete solution:
-
-### Updated `dev.html`
-
-```html
-<!DOCTYPE html>
-<html class="scroll-smooth" lang="id">
-<head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>About Developer & Source</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Sans+Arabic:wght@400;700&family=Noto+Sans+Devanagari:wght@400;700&family=Noto+Sans+Thai:wght@400;700&family=Noto+Sans+JP:wght@400;700&family=Noto+Sans+KR:wght@400;700&family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet"/>
-  <style>
-   body, html {
-     margin: 0;
-     padding: 0;
-     height: 100%;
-     font-family: "Google Sans", Arial, sans-serif;
-     background-color: white;
-     color: black;
-     display: flex;
-     flex-direction: column;
-     min-height: 100vh;
-   }
-   main {
-     flex-grow: 1;
-     width: 100%;
-     max-width: 1200px;
-     margin: 0 auto;
-     padding: 2rem 0;
-     box-sizing: border-box;
-   }
-   header {
-     position: sticky;
-     top: 0;
-     z-index: 50;
-     background-color: rgba(255, 255, 255, 0.7);
-     backdrop-filter: blur(10px);
-     -webkit-backdrop-filter: blur(10px);
-     border-bottom: 1px solid rgba(0, 1, 0, 0.1);
-     width: 100%;
-   }
-   .header-inner {
-     max-width: 1200px;
-     margin: 0 auto;
-     padding: 0.75rem 4rem;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-   }
-   .header-left {
-     display: flex;
-     align-items: center;
-     gap: 0.5rem;
-   }
-   .header-left span {
-     font-weight: 700;
-     font-size: 1.5rem;
-   }
-   .header-right {
-     display: flex;
-     align-items: center;
-     gap: 0.75rem;
-   }
-   .header-right a {
-     background: none;
-     border: none;
-     font-size: 1rem;
-     color: black;
-     cursor: pointer;
-     text-decoration: none;
-   }
-   .image-container {
-     position: relative;
-     border-radius: 1.5rem;
-     overflow: hidden;
-     margin-bottom: 2rem;
-   }
-   .image-container img {
-     width: 100%;
-     height: auto;
-     max-height: 400px;
-     object-fit: cover;
-     border-radius: 1.5rem;
-     display: block;
-   }
-   .Package-text {
-     margin-top: 0;
-     margin-bottom: 1rem;
-     padding: 0.75rem 4rem;
-     text-align: center;
-     font-weight: 700;
-     font-size: 1.25rem;
-   }
-   .overlay-extended {
-     width: 100%;
-     height: 300px;
-     background-image: url('https://via.placeholder.com/1200x300/00000080/00000080.png');
-     background-size: cover;
-     background-position: center;
-     border-radius: 1.5rem;
-     margin: 0 auto;
-     padding: 0.75rem 4rem;
-     box-sizing: border-box;
-     pointer-events: none;
-     user-select: none;
-   }
-   .section-container {
-     width: 100%;
-     max-width: 1200px;
-     margin: 1rem auto 0 auto;
-     padding: 0.75rem 4rem;
-     color: #4a4a4a;
-     font-weight: 300;
-     font-size: 1rem;
-   }
-   .section-container h2 {
-     font-weight: 700;
-     font-size: 1.125rem;
-     margin-bottom: 0.5rem;
-     color: black;
-     text-align: left;
-     padding: 0;
-   }
-   .content-container {
-     display: flex;
-     align-items: flex-start;
-     gap: 1rem;
-   }
-   .photo-container {
-     display: flex;
-     flex-direction: column;
-     gap: 1rem;
-   }
-   .photo-container.source {
-     gap: 1.5rem;
-   }
-   .photo-item {
-     display: flex;
-     flex-direction: row;
-     align-items: center;
-     gap: 1rem;
-   }
-   .rounded-photo {
-     width: 80px;
-     height: 80px;
-     border-radius: 50%;
-     object-fit: cover;
-     cursor: pointer;
-   }
-   .photo-desc {
-     font-size: 0.875rem;
-     color: #4a4a4a;
-     text-align: left;
-     max-width: 300px;
-   }
-   .text-container {
-     flex-grow: 1;
-   }
-   .text-container p {
-     margin: 0;
-     line-height: 1.5;
-     text-align: left;
-   }
-   .overlay-6-19 {
-     width: 100%;
-     aspect-ratio: 6 / 19;
-     background-image: url('https://via.placeholder.com/600x190/00000080/00000080.png');
-     background-size: cover;
-     background-position: center;
-     border-radius: 1.5rem;
-     margin: 1rem auto 0 auto;
-     padding: 0.75rem 4rem;
-     box-sizing: border-box;
-     pointer-events: none;
-     user-select: none;
-     max-height: 80px;
-   }
-   .centered-description {
-     width: 100%;
-     max-width: 1200px;
-     margin: 1rem auto 0 auto;
-     padding: 0.75rem 4rem;
-     color: #4a4a4a;
-     font-weight: 300;
-     font-size: 1rem;
-     text-align: center;
-   }
-   .centered-description h2 {
-     font-weight: 700;
-     font-size: 1.25rem;
-     margin-bottom: 0.5rem;
-     color: black;
-     text-align: center;
-     padding: 0;
-   }
-   #easterEggMessage {
-     position: fixed;
-     top: 50%;
-     left: 50%;
-     transform: translate(-50%, -50%);
-     background-color: rgba(0, 0, 0, 0.8);
-     color: white;
-     padding: 1rem 2rem;
-     border-radius: 0.5rem;
-     font-size: 1.25rem;
-     font-weight: 700;
-     z-index: 100;
-     display: none;
-     text-align: center;
-   }
-   @media (max-width: 640px) {
-     main {
-       padding: 1rem 0;
-     }
-     .header-inner {
-       padding: 0.75rem 2rem;
-     }
-     .header-left span {
-       font-size: 1.25rem;
-     }
-     .header-right a {
-       font-size: 0.875rem;
-     }
-     .image-container img {
-       max-height: 250px;
-     }
-     .overlay-extended {
-       height: 200px;
-       padding: 0.75rem 2rem;
-       background-image: url('https://via.placeholder.com/600x200/00000080/00000080.png');
-     }
-     .Package-text {
-       font-size: 1rem;
-       padding: 0.75rem 2rem;
-     }
-     .section-container {
-       padding: 0.75rem 2rem;
-     }
-     .section-container h2 {
-       font-size: 1rem;
-       padding: 0;
-     }
-     .overlay-6-19 {
-       padding: 0.75rem 2rem;
-       background-image: url('https://via.placeholder.com/300x95/00000080/00000080.png');
-     }
-     .centered-description {
-       padding: 0.75rem 2rem;
-       font-size: 0.875rem;
-     }
-     .centered-description h2 {
-       font-size: 1rem;
-       padding: 0;
-     }
-     h1 {
-       margin-top: 2rem !important;
-       padding: 0.75rem 2rem;
-     }
-     .rounded-photo {
-       width: 60px;
-       height: 60px;
-     }
-     .photo-desc {
-       font-size: 0.75rem;
-       max-width: 200px;
-     }
-     #easterEggMessage {
-       font-size: 1rem;
-       padding: 0.75rem 1.5rem;
-     }
-   }
-   @media (min-width: 641px) and (max-width: 1024px) {
-     .overlay-extended {
-       height: 250px;
-       background-image: url('https://via.placeholder.com/800x250/00000080/00000080.png');
-     }
-     .image-container img {
-       max-height: 300px;
-     }
-     .overlay-6-19 {
-       background-image: url('https://via.placeholder.com/400x126/00000080/00000080.png');
-     }
-   }
-   h1 {
-     margin-top: 4rem;
-     padding: 0.75rem 4rem;
-     text-align: center;
-   }
-  </style>
-</head>
-<body>
-  <header>
-   <div class="header-inner">
-    <div class="header-left">
-     <span>daxd</span>
-    </div>
-    <div class="header-right">
-     <a href="index.html" aria-label="Back">
-      <i class="fas fa-arrow-left"></i>
-     </a>
-    </div>
-   </div>
-  </header>
-  <main>
-   <h1 class="font-extrabold text-black text-4xl sm:text-5xl md:text-6xl leading-tight mb-2">
-     Tentang Developer dan Sumber Proyek
-   </h1>
-   <div class="section-container">
-    <h2>Developer</h2>
-    <div class="content-container">
-     <div class="photo-container">
-      <div class="photo-item">
-       <img id="developerPhoto" src="https://www.dropbox.com/scl/fi/qidqjnqrn96pebclj95ow/damz-1.png?rlkey=ish9x6xajhesmym80238gfjw8&st=i1y7l0i5&raw=1" alt="Developer Photo" class="rounded-photo"/>
-       <span class="photo-desc">Tridamz1th<br>UI/HTML/CSS/JS/DATA/DEV daxd</span>
-      </div>
-     </div>
-     <div class="text-container">
-      <!-- Teks deskripsi utama tetap di sebelah foto -->
-     </div>
-    </div>
-   </div>
-   <div class="section-container">
-    <h2>Source</h2>
-    <div class="content-container">
-     <div class="photo-container source">
-      <div class="photo-item">
-       <img src="https://www.dropbox.com/scl/fi/r2dkzugn3w3xparl8zb6u/oppa-1.png?rlkey=hy36763p1m9ac4uja4bs3ngdv&st=teqwrdz9&raw=1" alt="Source Contributor 1" class="rounded-photo"/>
-       <span class="photo-desc">Oppa334<br>TrollStore/Dopamine/Jailbreak</span>
-      </div>
-      <div class="photo-item">
-       <img src="https://www.dropbox.com/scl/fi/7rz2nxsjpu4c6rv10w8oj/nhutgg-1.png?rlkey=gaptj5f9a2nnguve3xxcaq1tz&st=au96y0gq&raw=1" alt="Source Contributor 2" class="rounded-photo"/>
-       <span class="photo-desc">Nhutgg<br>DNS/Esign/Other</span>
-      </div>
-     </div>
-     <div class="text-container">
-      <!-- Teks deskripsi utama tetap dihapus -->
-     </div>
-    </div>
-    <div class="overlay-6-19"></div>
-   </div>
-   <div id="easterEggMessage">Selamat, EasterEGG di temukan</div>
-  </main>
-  <audio id="easterEggAudio" loop>
-    <source src="bgg/sd/EasterEGG/RoiTaSeNgam.m4a" type="audio/mp4">
-    Browser Anda tidak mendukung elemen audio.
-  </audio>
-  <script>
-    // JavaScript untuk Easter Egg
-    const developerPhoto = document.getElementById('developerPhoto');
-    const easterEggAudio = document.getElementById('easterEggAudio');
-    const easterEggMessage = document.getElementById('easterEggMessage');
-
-    // Fungsi untuk memutar audio
-    function playEasterEggAudio() {
-      easterEggAudio.play().catch(error => {
-        console.error('Gagal memutar audio:', error);
+    // Deteksi navigasi keluar dari situs
+    document.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', (event) => {
+        const href = link.getAttribute('href');
+        // Hentikan audio jika navigasi ke domain lain
+        if (href && !href.startsWith('/') && !href.startsWith('#') && !href.includes('tridamz1th.github.io')) {
+          easterEggAudio.pause();
+          localStorage.removeItem('easterEggPlaying');
+        }
       });
-      localStorage.setItem('easterEggPlaying', 'true');
-    }
-
-    // Fungsi untuk memeriksa dan melanjutkan pemutaran audio saat halaman dimuat
-    function checkAudioPlayback() {
-      if (localStorage.getItem('easterEggPlaying') === 'true') {
-        easterEggAudio.play().catch(error => {
-          console.error('Gagal memutar audio:', error);
-        });
-      }
-    }
-
-    // Panggil fungsi saat halaman dimuat
-    window.addEventListener('load', checkAudioPlayback);
-
-    // Logika untuk klik foto developer
-    let clickCount = 0;
-    developerPhoto.addEventListener('click', () => {
-      clickCount++;
-      if (clickCount === 10) {
-        // Putar audio dan simpan status
-        playEasterEggAudio();
-        // Tampilkan pesan
-        easterEggMessage.style.display = 'block';
-        // Sembunyikan pesan setelah 5 detik
-        setTimeout(() => {
-          easterEggMessage.style.display = 'none';
-        }, 5000);
-        // Reset click count
-        clickCount = 0;
-      }
     });
 
-    // Hentikan audio saat pengguna menutup tab atau meninggalkan website
+    // Hentikan audio saat tab ditutup
     window.addEventListener('beforeunload', () => {
-      easterEggAudio.pause();
-      localStorage.removeItem('easterEggPlaying');
+      // Hanya hentikan jika tidak navigasi di dalam situs
+      if (!window.location.href.includes('tridamz1th.github.io')) {
+        easterEggAudio.pause();
+        localStorage.removeItem('easterEggPlaying');
+      }
     });
   </script>
 </body>
-      </html>
+</html>
