--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
    }
    .image-container img {
      width: 100%;
-     height: auto;
+     height: 100%;
      max-height: 400px;
      object-fit: cover;
      border-radius: 1.5rem;
@@ -353,7 +353,7 @@
     </div>
     <div class="header-right">
      <div class="profile-icon">
-       <img src="png/profile.png" alt="Profile Image">
+       <img src="png/png.png" alt="Profile Image">
      </div>
     </div>
    </div>
@@ -461,4 +461,4 @@
    setInterval(changeHello, 3000);
   </script>
  </body>
-</html>
+ </html>
